[package]
name = "terroth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
poem = "1.3.58"
poem-openapi = { version = "3.0.5", features = ["swagger-ui"] }
serde = "1.0.188"
tokio = { version = "1.33.0", features = ["full"] }
toml = "0.8.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
